# LLMs-in-Production

./: .pre-commit-config.yaml  .talismanrc  README.md  docker-compose.yml  init-replica.sh  pyproject.toml  requirements.txt
common/kafka/: fake_api_streamer.py  kafka_consumer.py  kafka_producer.py
common/kafka_utils/: fake_api_streamer.py  kafka_consumer.py  kafka_producer.py  serializers.py
common/utils/: fake_api_streamer.py  kafka_consumer.py
data/: wikipedia.csv
data-crawling/: config.py  dispatcher.py  documents_loader.py  lib.py  main.py  wikipedia_loader.py
data-crawling/crawlers/: __init__.py  base.py  github.py  linkedin.py  medium.py
data-crawling/db/: build_fake_db.py  documents.py  mongo.py
data-ingestion/: Dockerfile  KafkaProducerWrapper.py  api_streamer.py  cdc.py  docker-compose.dev.yml  fake_api_streamer.py  kafka_consumer.py  kafka_producer.py  main.py  mongodb_writer.py  requirements.txt
data/raw/stock_market/: biotech_5y_1d.csv
data_collection/: documents_loader.py  wikipedia_loader.py
data_ingestion/: Dockerfile  api_streamer.py  main.py  mongodb_writer.py  requirements.txt
data_processing/: Dockerfile  requirements.txt
data_processing/src/: spark_preprocessing.py
feature-pipeline/: Dockerfile  docker-compose.dev.spark.yml  docker-compose.feature-pipeline.yml  preprocessing.py  requirements.txt  spark_preprocessing.py
feature-pipeline/transformations/: chunking.py  embeddings.py  storing.py
kafka_stream/: consumer.py  docker-compose.yml  producer.py  utils.py
notebooks/: stock_market.ipynb
preprocessing/: Dockerfile  docker-compose.preprocessing.yml  requirements.txt
preprocessing/src/: spark_preprocessing.py
rag/: config.yaml  documents_loader.py  evaluations.py  generation.py  hybrid_search.py  rag_retriever.py  retriever.py
rag_system/: config.py  evaluations.py  generation.py  retriever.py
vector-storing/: Dockerfile  Dockerfile.storing  README.md  fake_data_generator.py  requirements.txt  storing.py
vector_storage/: quantization.py  requirements.txt  storing.py
