[tool.poetry]
name = "llm-to-prod"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
selenium = "^4.23.1"
beautifulsoup4 = "^4.12.3"
aws-lambda-powertools = "^2.42.0"
pymongo = "^4.8.0"
pydantic = "^2.8.2"
pydantic-settings = "2.1.0"
structlog = "24.1.0"
basecrawler = "^0.1.20"
faker = "^26.0.0"
kafka-python = "^2.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
