[tool.poetry]
name = "llm-to-prod"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
selenium = "^4.23.1"
beautifulsoup4 = "^4.12.3"
aws-lambda-powertools = "^2.42.0"
pymongo = "^4.8.0"
pydantic = "^2.8.2"
pydantic-settings = "2.1.0"
structlog = "24.1.0"
basecrawler = "^0.1.20"
faker = "^26.0.0"
kafka-python = "^2.0.2"
bytewax = "^0.20.1"
pyspark = "^3.5.1"
ruff = "^0.5.5"
line-profiler-pycharm = "^1.1.0"
langchain = "^0.2.12"
instructorembedding = "^1.0.1"
sentence-transformers = "^3.0.1"
langchain-community = "^0.2.10"
openai = "^1.38.0"
tiktoken = "^0.7.0"
langchain-openai = "^0.1.20"
qdrant-client = "^1.10.1"
loguru = "^0.7.2"
arxiv = "^2.1.3"
ratelimit = "^2.2.1"
pypdf = "^4.3.1"
pandas = "^2.2.2"
ragas = "^0.1.14"
datasets = "^2.21.0"
pre-commit = "^3.8.0"


[tool.poetry.group.dev.dependencies]
matplotlib = "^3.9.2"
seaborn = "^0.13.2"
plotly = "^5.24.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
